--- a/src/index.css
+++ b/src/index.css
@@ -54,3 +54,22 @@ form:not(.add-group) {
   font-family: sans-serif;
   font-weight: normal;
 }
+
+.groups-list li > a {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #7b8a8b;
+  white-space: nowrap;
+}
+
+.groups-list .active > a,
+.groups-list > li > a:hover,
+.groups-list > li > a:focus {
+  color: #ffffff;
+  text-decoration: none;
+  outline: 0;
+  background-color: #2c3e50;
+}
