--- a/src/index.css
+++ b/src/index.css
@@ -73,3 +73,7 @@ form:not(.add-group) {
   outline: 0;
   background-color: #2c3e50;
 }
+
+.btn-group-justified>.btn-group {
+  border: 1px solid white;
+}
